2008-09-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_get_msg_async_default),
	(tny_camel_folder_find_msg_async_default):
	* libtinymail-camel/tny-camel-queue-priv.h:
	* libtinymail-camel/tny-camel-queue.c (_tny_camel_queue_has_items):
	* libtinymail-camel/tny-camel-store-account.c
	(_tny_camel_store_account_queue_going_online): do not add a
	message retrieval (with both get_msg_async and find_msg_async) to
	the IMAP store account message retrieval queue when there is a
	pending connection in the account queue.

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-session-camel.c: Make account_store
	weak-referenced in TnySessionCamel.

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-message-cache.c:
	Fix some valgrind warnings in camel imap provider.

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail/tny-progress-info.c: Make the sofar/oftotal field in
	TnyProgress more sensible when one of the is negative.  In general one
	of these ill be negative right at the start of an operation, and if
	one is 0, then the other is generally gibberish, so 0/0 is more
	sensible.

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	* libtinymail-camel/tny-camel-folder.c: Correctly change the unread
	and total message numbers after a status_poke

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-camel-folder.c:
	* libtinymail-camel/tny-camel-store-account.c:
	do unrefs in dispose, not finalise for tny-camel-folder and tny-camel-st

2008-08-28  Martin Bonnin  <martinbonnin@gmail.com>

	* Fixed typo in camel-service.c

2008-08-27  Martin Bonnin  <martinbonnin@gmail.com>
