@@ -1,3 +1,9 @@
+2008-09-03  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymail-camel/tny-camel-mime-part.c
+	(tny_camel_mime_part_decode_to_stream_async_default): make it really
+	asynchronous, doing the operation in a separate thread.
+
 2008-09-03  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c
